[package]
name = "weatherradio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "3.0.0-beta.2", default-features = false, features = ["color", "std", "cargo"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.18", default-features = false, features = ["colors"] }
chrono = "0.4"
crc-any = "2"
uom = { version = "0.31", default-features = false, features = ["autoconvert", "f32", "si", "std", "u16", "u16"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paho-mqtt = "0.9"
