[package]
name = "weatherradio"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
clap = { version = "3", default-features = false, features = ["color", "std", "cargo"] }
log = { version = "0.4", default-features = true, features = ["std"] }
flexi_logger = { version = "0.22", default-features = false, features = ["colors"] }
dirs = "4"
chrono = "0.4"
crc-any = "2"
uom = { version = "0.32", default-features = false, features = ["autoconvert", "f32", "si", "std", "u16", "u32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
paho-mqtt = "0.9"
keyring = "1"
rpassword = "5"
